[gd_scene load_steps=3 format=3 uid="uid://0fuaejuq02f3"]

[ext_resource type="Script" uid="uid://kuet3i66y3ly" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://brub7u732cjig" path="res://aanya.tscn" id="2_h2yge"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 159.0
offset_bottom = 43.0
text = "Pages Typed: 0/30"

[node name="EnergyLabel" type="Label" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 50.0
offset_right = 145.0
offset_bottom = 78.0
text = "Energy Drinks: 3"

[node name="FatigueBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 107.0
max_value = 10.0

[node name="HelpLabel" type="Label" parent="CanvasLayer"]
custom_minimum_size = Vector2(400, 20)
offset_left = 20.0
offset_top = 120.0
offset_right = 60.0
offset_bottom = 143.0
autowrap_mode = 2

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.16470589, 0.1882353, 0.42352942, 1)
metadata/_edit_use_anchors_ = true

[node name="Aanya" parent="." instance=ExtResource("2_h2yge")]
position = Vector2(36, 434)
